Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-13001

Cannot assign the server time synchronization.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.13
    • None
    • None

    Description

      Open Properties for Date/Time
      Select tab "Internet Time"
      Check "Automatically synchronize with an Internet time server"
      Click "OK"

      Open Properties for Date/Time again
      "Automatically synchronize with an Internet time server" unchecked (

      Also I can't enter any server anddress in "Server" field

      Attachments

        1. ClockResync.exe
          28 kB
        2. ClockResync.zip
          253 kB
        3. Debug.log
          55 kB
        4. internettime_disable.patch
          0.5 kB
        5. w32time.patch
          48 kB

        Issue Links

          Activity

            People

              ThFabba ThFabba
              amber amber
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: