[TIMEDATE] Handle manual time server entry. CORE-13001